# json-into-sql

./: ,.nu  Cargo.toml  README.md  __.nu  config.toml
example/: flow.ts  gen.ts  insert.ts  table.toml
src/: gen.rs  main.rs
src/libs/: config.rs  data.rs  error.rs  mod.rs  postgres.rs  redis.rs  schema.rs  shared.rs  utils.rs
