[package]
name = "json-into-sql"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
figment = { version = "0.10.19", features = ["toml", "env"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_derive = "1.0.219"
serde_json = "1.0.140"
short-uuid = "0.2.0"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio"] }
tokio = { version = "1.45.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
axum = "0.8.4"
redis = { version = "0.32.3", features = ["tokio-comp", "r2d2"] }
r2d2 = "0.8.10"
